<?xml version="1.0" encoding="utf-8"?>
<!--
     EditActivity主布局
         创建人：Xu/Group Friend 
         创建时间：2015-12-6 22:55:51  !
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#DB985E" >

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_icon"
            android:contentDescription="@string/back"/>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/edit"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/save_icon"
            android:contentDescription="@string/save" />

        <ImageButton
            android:id="@+id/alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/save"
            android:background="@drawable/alert_icon"
            android:contentDescription="@string/alert" />
    </RelativeLayout>

    <TextView
        android:id="@+id/alerttime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/ediTextTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/title_hint"
        android:textCursorDrawable="@drawable/color_cursor" />

    <EditText
        android:id="@+id/editTextContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="top"
        android:hint="@string/content_hint"
        android:textCursorDrawable="@drawable/color_cursor" />

</LinearLayout>